objects/Phone__x.object
<CustomObject><fields>
        <fullName>Brand__c</fullName>
        <description>Brand</description>
        <externalDeveloperName>Brand</externalDeveloperName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Brand</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ID__c</fullName>
        <description>ID</description>
        <externalDeveloperName>ID</externalDeveloperName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>ID</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PhoneNumber__c</fullName>
        <description>PhoneNumber</description>
        <externalDeveloperName>PhoneNumber</externalDeveloperName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>PhoneNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UUID__c</fullName>
        <description>UUID</description>
        <externalDeveloperName>UUID</externalDeveloperName>
        <label>UUID</label>
        <length>128</length>
        <referenceTargetField>User.Phone_UUID__c</referenceTargetField>
        <referenceTo>User</referenceTo>
        <relationshipName>phones</relationshipName>
        <type>IndirectLookup</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>InDevelopment</deploymentStatus><description>phones</description><enableFeeds>false</enableFeeds><enableReports>false</enableReports><enableSearch>true</enableSearch><externalDataSource>Mobile_Devices</externalDataSource><externalName>phones</externalName><label>phones</label><pluralLabel>phones</pluralLabel></CustomObject>